# project-readmission-diabetes

./: .gitignore  CLAUDE.md  README.md  main.ipynb  pyproject.toml  relatorio.tex  slides.tex
docs/referencia_aluno/: Diabetes_130_Hospitals_Preprocessing (3).ipynb  Diabetes_130_Hospitals_Preprocessing.ipynb
reports/cv_results/: decision_tree__baseline.csv  decision_tree__robust.csv  decision_tree__smote.csv  decision_tree__target_enc.csv  decision_tree__undersample.csv  final_test_per_class.csv  final_test_results.csv  knn__baseline.csv  knn__target_enc.csv  lightgbm__baseline.csv  lightgbm__robust.csv  lightgbm__smote.csv  lightgbm__target_enc.csv  lvq__baseline.csv  lvq__robust.csv  lvq__smote.csv  lvq__target_enc.csv  lvq__undersample.csv  mlp__baseline.csv  mlp__robust.csv  mlp__target_enc.csv  random_forest__baseline.csv  random_forest__robust.csv  random_forest__smote.csv  random_forest__target_enc.csv  random_forest__undersample.csv  ranking_all_configs.csv  stacking__baseline.csv  stacking__robust.csv  stacking__target_enc.csv  svm__baseline.csv  svm__robust.csv  svm__smote.csv  svm__target_enc.csv  svm__undersample.csv  xgboost__baseline.csv  xgboost__robust.csv  xgboost__smote.csv  xgboost__target_enc.csv
scripts/: build_main_notebook.py  run_baseline.py  run_final_evaluation.py  run_variant_sweep.py
src/: data_loader.py  evaluation.py  models.py  preprocessing.py  search.py  utils.py
